--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-           <h1>Projego do Thiago</h1>
+           <h1>Projego do Thiago Alves</h1>
     </body>
 
 </html>
