--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
     </head>
-    <body>
+    <main>
            <h1>Projego do Thiago Alves</h1>
-    </body>
+    </main>
 
 </html>
