inicio do design

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
-    <head>
+    <head> 
+        <link rel="stylesheet" href="estilo.css">
     </head>
-    <main>
+    <body>
            <h1>Projego do Thiago Alves</h1>
-    </main>
+
+        <div>
+            conteudo da pagina - alterado!
+        </div>
+    </body>
 
 </html>
