--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
-           <h1>Projego do Thiago Alves</h1>
+           <h1>Projego do Thiago Alves - ALTERAR TITULO DO SITE</h1>
 
         <div>
             conteudo da pagina - alterado!
